<resources>
    <string name="app_name">BooksApplication</string>

    <string name="title_list">Books</string>
    <string name="title_add_book">Add Book</string>
    <string name="title_book_details">Book Details</string>

    <string name="username">Username</string>
    <string name="passoword">Password</string>
    <string name="login_header">LOGIN</string>
    <string name="login_action_button">LOGIN</string>

    <string name="generic_error_message">Something went wrong. Try again later.</string>
    <string name="no_internet_error_message">No internet connection. Check your network and try again.</string>
    <string name="login_failed_msg">Failed to login. Check your username and password and try again.</string>
    <string name="action_retry">Retry</string>

    <string name="book_cover_hint">Cover image url</string>
    <string name="book_title_hint">Title</string>
    <string name="book_description_hint">Description</string>
    <string name="add">Add</string>

    <string name="login_username_empty_error">Username cannot be empty.</string>
    <string name="login_password_empty_error">Password cannot be empty.</string>
    <string name="book_add_title_empty_error">Title cannot be empty.</string>
    <string name="book_add_title_invalid_error">Invalid title.</string>
    <string name="book_add_description_empty_error">Description cannot be empty.</string>
    <string name="book_add_description_invalid_error">Invalid description.</string>
    <string name="book_add_cover_empty_error">Cover image url cannot be empty.</string>
    <string name="book_add_cover_invalid_error">Invalid cover image url.</string>

    <string name="book_creation_success_msg">Book created.</string>
    <string name="book_creation_fail_msg">Failed to create book.</string>
    <string name="book_delete_success_msg">Book removed.</string>
    <string name="book_delete_fail_msg">Failed to remove book.</string>

    <string name="action_delete">Delete</string>

    <string name="confirmation_dialog_positive_button">Yes</string>
    <string name="confirmation_dialog_negative_button">No</string>

    <string name="book_delete_confirmation_message">Are you sure you want to delete this book?</string>
</resources>
