<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/progress"
        layout="@layout/progress_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username"
            style="@style/customEditText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey" />

        <EditText
            android:id="@+id/password"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/passoword"
            android:inputType="textPassword"
            style="@style/customEditText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_bg"
            android:padding="3dp"
            android:text="@string/login_action_button"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>